--- a/backup_20250719_194021/sidebar.html
+++ b/backup_20250719_194021/sidebar.html
@@ -9,7 +9,7 @@
         <button @click.prevent="goTo('frame' + n)"
           class="w-full text-left px-3 py-2 rounded-lg transition-colors duration-150 hover:bg-blue-100 hover:text-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-300"
           :class="{'bg-blue-200 text-blue-900 font-semibold': active === 'frame' + n}">
-          <span x-text="'Frame ' + n"></span>
+          Frame {{ n }}
         </button>
       </li>
     </template>
