--- a/backup_20250719_194054/footer.html
+++ b/backup_20250719_194054/footer.html
@@ -2,6 +2,6 @@
   <div class="max-w-7xl mx-auto px-6 py-4 text-center text-sm text-gray-700 flex flex-col items-center">
     <hr class="w-1/2 border-gray-300 mb-2" />
     <span>&copy; 2025 योग शिक्ष्क प्रशिक्षण. सभी अधिकार सुरक्षित।</span>
-    <span class="mt-1 text-xs text-gray-400">Made with ❤️ by <a href="https://vijaygoswami.com" class="underline hover:text-blue-600" target="_blank" rel="noopener">Vijay Goswami</a></span>
+    <span class="mt-1 text-xs text-gray-400">Made with ❤️ by Yogalok</span>
   </div>
 </footer>
