--- a/backup_20250719_194054/header.html
+++ b/backup_20250719_194054/header.html
@@ -4,8 +4,8 @@
       <span class="inline-flex items-center justify-center w-10 h-10 bg-blue-200 rounded-full shadow">
         <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"/></svg>
       </span>
-      <h1 class="text-2xl font-extrabold text-gray-800 tracking-tight">योग शिक्ष्क प्रशिक्षण</h1>
+      <h1 class="text-2xl font-extrabold text-gray-800 tracking-tight"> 6b  योग शिक्ष्क प्रशिक्षण</h1>
     </div>
-    <span class="text-base text-gray-600 font-medium hidden md:inline">प्रस्तुतिप्रणाली</span>
+    <span class="text-base text-gray-600 font-medium hidden md:inline"> प्रस्तुतिप्रणाली</span>
   </div>
 </header>
