Footer: English only, new credit for Vijay Goswami and Attrix Technologies

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
   <!-- Main Content Area -->
   <div class="flex flex-1 flex-col md:flex-row relative">
-    <!-- Mobile Sidebar Toggle -->
-    <button @click="sidebarOpen = !sidebarOpen" class="md:hidden p-2 bg-blue-100 text-blue-700 rounded shadow mb-2 ml-2 mt-2 w-32 self-start z-50">स्लाइड्स मेनू</button>
     <!-- Sidebar -->
     <aside :class="sidebarOpen ? 'block' : 'hidden'" class="w-full md:w-64 bg-gray-100 p-4 overflow-y-auto md:block md:relative fixed top-16 left-0 h-full z-40 md:z-auto transition-all duration-300" x-html="sidebar"></aside>
 
@@ -594,8 +592,18 @@
           if (this.frames.some(f => f.id === id)) {
             this.active = id;
             window.location.hash = id;
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-            if (window.innerWidth < 768) this.sidebarOpen = false;
+            if (window.innerWidth < 768) {
+              this.sidebarOpen = false;
+              setTimeout(() => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+                const main = document.querySelector('main');
+                if (main) main.scrollTo({ top: 0, behavior: 'smooth' });
+              }, 500);
+            } else {
+              window.scrollTo({ top: 0, behavior: 'smooth' });
+              const main = document.querySelector('main');
+              if (main) main.scrollTo({ top: 0, behavior: 'smooth' });
+            }
           }
         },
 
