--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yoga Teacher Training - Presentation</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
@@ -112,7 +113,7 @@
       <p class="mb-4">
         ब्रह्मचर्य शब्द आमतौर पर 'ब्रह्मचर्य' के रूप में लिया जाता है। इसे इसलिए अक्सर हमारी आधुनिक
         संस्कृति में अप्रासंगिक माना जाता है। ब्रह्मचर्य शब्द का मतलब है ‘ऐसा व्यवहार जो ब्रह्म की ओर
-        ले जाता है’। हिंदू धर्म और योगिक शब्दों में ब्रह्म को सृष्टि का निर्माता माना जाता है। इसलिए
+        ले जाता है'। हिंदू धर्म और योगिक शब्दों में ब्रह्म को सृष्टि का निर्माता माना जाता है। इसलिए
         ब्रह्मचर्य को 'ऊर्जा के सही उपयोग' के रूप में देखा जा सकता है। इसका मतलब है अपनी ऊर्जा को बाहरी
         इच्छाओं से दूर रखना और इसके बजाय, अपनी भीतर शांति और खुशी पाने की दिशा में निर्देशित करना।
       </p>
@@ -166,7 +167,7 @@
       </p>
 
       <p class="mb-4">
-        योगशास्त्र में आत्म-संयम एवं सकारात्मक कल्पना या ‘पालन’ के परिप्रेक्ष्य और साथ ही श्रेष्ठ जीवन
+        योगशास्त्र में आत्म-संयम एवं सकारात्मक कल्पना या 'पालन' के परिप्रेक्ष्य और साथ ही श्रेष्ठ जीवन
         शैली के लिए योग के नियमों का महत्व काफी ज़्यादा है। यम और नियम सुव्यवस्थित एवं संयमित जीवन में
         अग्रसर होने की प्रक्रिया से ही संबंधित हैं। इसमें ऐसे कर्मों के बारे में बताया गया है जो हमें
         खुद को शुद्धि के लिए करने हैं।
@@ -213,12 +214,12 @@
 
       <h3 class="text-xl font-semibold mb-2">2. संतोष (Santosha)</h3>
       <p class="mb-4">
-        इसे समझना मुश्किल नहीं लेकिन निभाना जरूर मुश्किल है। कर्तव्य का पालन करते हुए जो प्राप्त हो उसमें संतुष्ट रहना या जो कुछ परमात्मा की कृपा से प्राप्त हो, उसमें संतुष्ट रहना ही ‘संतोष’ है।
+        इसे समझना मुश्किल नहीं लेकिन निभाना जरूर मुश्किल है। कर्तव्य का पालन करते हुए जो प्राप्त हो उसमें संतुष्ट रहना या जो कुछ परमात्मा की कृपा से प्राप्त हो, उसमें संतुष्ट रहना ही 'संतोष' है।
       </p>
 
       <h3 class="text-xl font-semibold mb-2">3. तप (Tapas)</h3>
       <p class="mb-4">
-        तप या तपस्या का अर्थ होता है मन और शरीर को अनुशासित रखना। सुख-दुख, सर्दी-गर्मी, भूख-प्यास जैसे द्वंदों को सहन करते हुए मन व शरीर को साधना ही ‘तप’ है।
+        तप या तपस्या का अर्थ होता है मन और शरीर को अनुशासित रखना। सुख-दुख, सर्दी-गर्मी, भूख-प्यास जैसे द्वंदों को सहन करते हुए मन व शरीर को साधना ही 'तप' है।
       </p>
 
       <h3 class="text-xl font-semibold mb-2">4. स्वाध्याय (Swadhyaya)</h3>
@@ -272,7 +273,7 @@
       <h3 class="text-xl font-semibold mb-2">उत्तम स्वास्थ्य के लिए आसन – ताड़ासन</h3>
 
       <p class="mb-2">
-        <strong>ताड़ासन:</strong> संस्कृत शब्द ‘ताड़’ का अभिप्राय ताड़ के पेड़ से है। यह आसन इसलिए ताड़ासन कहलाता है क्योंकि इसमें शरीर की स्थिति ताड़ के पेड़ जैसी सीधी हो जाती है।
+        <strong>ताड़ासन:</strong> संस्कृत शब्द 'ताड़' का अभिप्राय ताड़ के पेड़ से है। यह आसन इसलिए ताड़ासन कहलाता है क्योंकि इसमें शरीर की स्थिति ताड़ के पेड़ जैसी सीधी हो जाती है।
       </p>
 
       <h4 class="font-semibold mt-4 mb-2">प्रविधि:</h4>
@@ -417,7 +418,7 @@
 
       <h3 class="text-xl font-semibold mb-2">उत्तानपादासन</h3>
       <p class="mb-2">
-        ‘उत्तान’ का अर्थ है ऊपर की ओर खिंचना और ‘पाद’ का अर्थ है पैर। इस आसन में टाँगों को ऊपर खिंचकर रखा जाता है।
+        'उत्तान' का अर्थ है ऊपर की ओर खिंचना और 'पाद' का अर्थ है पैर। इस आसन में टाँगों को ऊपर खिंचकर रखा जाता है।
       </p>
 
       <h4 class="font-semibold mb-2">क्रिया:</h4>
@@ -581,7 +582,7 @@
       <h2 class="text-2xl font-bold mb-4">Frame 10: अनुलोम-विलोम प्राणायाम</h2>
 
       <p class="mb-4">
-        अनुलोम का अर्थ है ‘की ओर’ और विलोम का अर्थ है ‘विपरीत’। इस प्राणायाम में श्वसन क्रिया दोनों नासाछिद्रों से क्रमशः और विपरीत तरीके से की जाती है। 
+        अनुलोम का अर्थ है 'की ओर' और विलोम का अर्थ है 'विपरीत'। इस प्राणायाम में श्वसन क्रिया दोनों नासाछिद्रों से क्रमशः और विपरीत तरीके से की जाती है। 
         इसे नाड़ी शोधन प्राणायाम भी कहते हैं क्योंकि यह शरीर की नाड़ियों को शुद्ध करने में सहायक होता है।
       </p>
 
@@ -757,7 +758,7 @@
         <li>पद्मासन या ध्यान मुद्रा में बैठें।</li>
         <li>हाथ ज्ञान मुद्रा में रखें, आंखें हल्के से बंद करें।</li>
         <li>जीभ को तालु से लगाएँ, दाँत हल्के से एक-दूसरे पर रखें और होंठ खोलें।</li>
-        <li>“सी” की ध्वनि के साथ दांतों के बीच से श्वास अंदर लें।</li>
+        <li>"सी" की ध्वनि के साथ दांतों के बीच से श्वास अंदर लें।</li>
         <li>श्वास रोकें, फिर होंठ बंद कर नाक से धीरे-धीरे श्वास छोड़ें।</li>
       </ul>
 
@@ -1013,7 +1014,7 @@
       </p>
 
       <p class="mb-4">
-        धारणा को पाने से पहले यम, नियम, आसन, प्राणायाम और प्रत्याहार का अभ्यास आवश्यक है। इन अभ्यासों से शरीर, श्वास और मन पर नियंत्रण प्राप्त होता है, जिससे धारणा सुलभ होती है। धारणा का नियमित अभ्यास न केवल ध्यान को बेहतर बनाता है बल्कि किसी भी परिस्थिति में मन को स्थिर और शांत बनाए रखने की क्षमता भी प्रदान करता है – यही “स्थिरं सुखं आसनम्” का सार है।
+        धारणा को पाने से पहले यम, नियम, आसन, प्राणायाम और प्रत्याहार का अभ्यास आवश्यक है। इन अभ्यासों से शरीर, श्वास और मन पर नियंत्रण प्राप्त होता है, जिससे धारणा सुलभ होती है। धारणा का नियमित अभ्यास न केवल ध्यान को बेहतर बनाता है बल्कि किसी भी परिस्थिति में मन को स्थिर और शांत बनाए रखने की क्षमता भी प्रदान करता है – यही "स्थिरं सुखं आसनम्" का सार है।
       </p>
 
       <div class="flex justify-between mt-6">
@@ -1105,9 +1106,9 @@
       <p class="mb-4">
         जब सांस पर पूर्ण नियंत्रण और मन पूरी तरह स्थिर और संतुलित हो जाए, तब साधक समाधि की स्थिति में प्रवेश करता है। योगशास्त्र के अनुसार:
         <br />
-        – 5 सेकंड तक प्राणवायु को रोकना “<strong>धारणा</strong>” है।<br />
-        – 60 सेकंड तक मन को एक विषय पर केंद्रित करना “<strong>ध्यान</strong>” है।<br />
-        – और 12 दिनों तक प्राणों का निरंतर संयम करना ही “<strong>समाधि</strong>” है।
+        – 5 सेकंड तक प्राणवायु को रोकना "<strong>धारणा</strong>" है।<br />
+        – 60 सेकंड तक मन को एक विषय पर केंद्रित करना "<strong>ध्यान</strong>" है।<br />
+        – और 12 दिनों तक प्राणों का निरंतर संयम करना ही "<strong>समाधि</strong>" है।
       </p>
 
       <div class="flex justify-between mt-6">
