--- a/frames/frame7.html
+++ b/frames/frame7.html
@@ -1,9 +1,16 @@
 <div class="max-w-3xl mx-auto">
     <img
-            src="images/frame7.jpg"
+            src="images/frame7-1.jpg"
             alt="अष्टांग योग - पवनमुक्तासन और उत्तानपादासन"
             class="w-full h-auto rounded-lg shadow mb-6"
     />
+
+     <img
+            src="images/frame7-2.jpg"
+            alt="अष्टांग योग - पवनमुक्तासन और उत्तानपादासन"
+            class="w-full h-auto rounded-lg shadow mb-6"
+    />
+    
 
     <h2 class="text-2xl font-bold mb-4">Frame 7: पवनमुक्तासन और उत्तानपादासन</h2>
 
