--- a/frames/frame8.html
+++ b/frames/frame8.html
@@ -1,6 +1,11 @@
 <div class="max-w-3xl mx-auto">
     <img
-            src="images/frame8.jpg"
+            src="images/frame8-1.jpg"
+            alt="अर्धपद्मासन और मकरासन"
+            class="w-full h-auto rounded-lg shadow mb-6"
+    />
+    <img
+            src="images/frame8-2.jpg"
             alt="अर्धपद्मासन और मकरासन"
             class="w-full h-auto rounded-lg shadow mb-6"
     />
