--- a/frames/frame5.html
+++ b/frames/frame5.html
@@ -1,44 +1,54 @@
-<div class="max-w-3xl mx-auto">
-    <img
-            src="images/frame5.jpg"
-            alt="अष्टांग योग - आसन"
-            class="w-full h-auto rounded-lg shadow mb-6"
-    />
+<div class="max-w-6xl mx-auto px-4">
+    <div class="flex flex-col md:flex-row items-start gap-8">
+        <!-- Image -->
+        <div class="md:w-1/2">
+            <img
+                src="images/frame5.jpg"
+                alt="अष्टांग योग - आसन"
+                class="w-full h-auto rounded-lg shadow"
+            />
+        </div>
 
-    <h2 class="text-2xl font-bold mb-4">Frame 5: अष्टांग योग का तीसरा अंग – आसन</h2>
+        <!-- Content -->
+        <div class="md:w-1/2">
+            <h2 class="text-2xl font-bold mb-4">Frame 5: अष्टांग योग का तीसरा अंग – आसन</h2>
 
-    <p class="mb-4">
-        आसन का अर्थ है एक विशिष्ट मुद्रा में बैठना, जो आरामदायक हो और जिसे लंबे समय तक स्थिर रखा जा सके। आसन शारीरिक और मानसिक दोनों स्तरों पर स्थायित्व और आराम प्रदान करते हैं।
-    </p>
+            <p class="mb-4">
+                आसन का अर्थ है एक विशिष्ट मुद्रा में बैठना, जो आरामदायक हो और जिसे लंबे समय तक स्थिर रखा जा सके।
+                आसन शारीरिक और मानसिक दोनों स्तरों पर स्थायित्व और आराम प्रदान करते हैं।
+            </p>
 
-    <p class="mb-4">
-        मुख्य रूप से आसन दो तरह के होते हैं:
-        <br><strong>1. गतिशील आसन</strong> – वे आसन जिनमें शरीर शारीरिक रूप से गतिशील रहता है।
-        <br><strong>2. स्थिर आसन</strong> – वे आसन जिनमें अभ्यास बहुत कम या बिना गति के होता है।
-    </p>
+            <p class="mb-4">
+                मुख्य रूप से आसन दो तरह के होते हैं:
+                <br><strong>1. गतिशील आसन</strong> – वे आसन जिनमें शरीर शारीरिक रूप से गतिशील रहता है।
+                <br><strong>2. स्थिर आसन</strong> – वे आसन जिनमें अभ्यास बहुत कम या बिना गति के होता है।
+            </p>
 
-    <h3 class="text-xl font-semibold mb-2">उत्तम स्वास्थ्य के लिए आसन – ताड़ासन</h3>
+            <h3 class="text-xl font-semibold mb-2">उत्तम स्वास्थ्य के लिए आसन – ताड़ासन</h3>
 
-    <p class="mb-2">
-        <strong>ताड़ासन:</strong> संस्कृत शब्द 'ताड़' का अभिप्राय ताड़ के पेड़ से है। यह आसन इसलिए ताड़ासन कहलाता है क्योंकि इसमें शरीर की स्थिति ताड़ के पेड़ जैसी सीधी हो जाती है।
-    </p>
+            <p class="mb-2">
+                <strong>ताड़ासन:</strong> संस्कृत शब्द 'ताड़' का अभिप्राय ताड़ के पेड़ से है। यह आसन इसलिए ताड़ासन
+                कहलाता है क्योंकि इसमें शरीर की स्थिति ताड़ के पेड़ जैसी सीधी हो जाती है।
+            </p>
 
-    <h4 class="font-semibold mt-4 mb-2">प्रविधि:</h4>
-    <ul class="list-disc pl-6 mb-4 space-y-1">
-        <li>सीधे खड़े हो जाएँ, पैर जुड़े हुए हों और पीठ सीधी रहे।</li>
-        <li>दोनों हाथ जांघों के बगल में हों, सामने देखें।</li>
-        <li>भुजाओं को सिर के ऊपर ले जाएँ, हथेलियाँ आमने-सामने रखें।</li>
-        <li>धीरे-धीरे एड़ियों को उठाएँ और पंजों पर खड़े हो जाएँ।</li>
-        <li>पूरा शरीर सिर से लेकर पंजों तक सीधा और तनावयुक्त रखें।</li>
-        <li>वापस लौटते समय धीरे से एड़ियों को नीचे लाएँ और हाथों को नीचे लाकर विश्राम करें।</li>
-    </ul>
+            <h4 class="font-semibold mt-4 mb-2">प्रविधि:</h4>
+            <ul class="list-disc pl-6 mb-4 space-y-1">
+                <li>सीधे खड़े हो जाएँ, पैर जुड़े हुए हों और पीठ सीधी रहे।</li>
+                <li>दोनों हाथ जांघों के बगल में हों, सामने देखें।</li>
+                <li>भुजाओं को सिर के ऊपर ले जाएँ, हथेलियाँ आमने-सामने रखें।</li>
+                <li>धीरे-धीरे एड़ियों को उठाएँ और पंजों पर खड़े हो जाएँ।</li>
+                <li>पूरा शरीर सिर से लेकर पंजों तक सीधा और तनावयुक्त रखें।</li>
+                <li>वापस लौटते समय धीरे से एड़ियों को नीचे लाएँ और हाथों को नीचे लाकर विश्राम करें।</li>
+            </ul>
 
-    <h4 class="font-semibold mb-2">लाभ:</h4>
-    <ul class="list-disc pl-6 space-y-1">
-        <li>पूरे शरीर की पेशियों को सशक्त बनाता है।</li>
-        <li>शरीर और त्वचा को पुष्ट करता है।</li>
-        <li>बच्चों की लंबाई बढ़ाने में सहायक है।</li>
-        <li>आलस्य और सुस्ती को दूर करता है।</li>
-        <li>पेशियों को समुचित खिंचाव प्रदान करता है।</li>
-    </ul>
+            <h4 class="font-semibold mb-2">लाभ:</h4>
+            <ul class="list-disc pl-6 space-y-1">
+                <li>पूरे शरीर की पेशियों को सशक्त बनाता है।</li>
+                <li>शरीर और त्वचा को पुष्ट करता है।</li>
+                <li>बच्चों की लंबाई बढ़ाने में सहायक है।</li>
+                <li>आलस्य और सुस्ती को दूर करता है।</li>
+                <li>पेशियों को समुचित खिंचाव प्रदान करता है।</li>
+            </ul>
+        </div>
+    </div>
 </div>
