--- a/frames/frame5.html
+++ b/frames/frame5.html
@@ -5,7 +5,7 @@
             <img
                 src="images/frame5.jpg"
                 alt="अष्टांग योग - आसन"
-                class="w-full h-auto rounded-lg shadow"
+                class="w-full h-1/2 rounded-lg shadow"
             />
         </div>
 
