On select submit

--- a/index.html
+++ b/index.html
@@ -45,26 +45,34 @@
                                        :value="opt"
                                        x-model="answers[q.id]"
                                        class="mr-2"
-                                       :disabled="submitted[q.id]"
-                                       @change="autoSubmit(q)">
+                                       :disabled="submitted">
                                 <span x-text="q[opt]"></span>
                             </label>
                         </template>
 
-                        <!-- Show feedback -->
-                        <template x-if="submitted[q.id]">
+                        <!-- Show feedback for selected option -->
+                        <template x-if="submitted && answers[q.id]">
                             <p class="mt-2 text-sm"
                                :class="answers[q.id] === q.correct ? 'text-green-700' : 'text-red-600'">
-                                <span x-text="q['context' + answers[q.id].slice(-1)]"></span>
+                                <span
+                                        x-text="q['context' + answers[q.id].slice(-1)]">
+                                </span>
                             </p>
                         </template>
                     </div>
                 </template>
 
-                <!-- Navigation -->
-                <div class="flex justify-end mt-6">
+                <!-- Buttons -->
+                <div class="flex space-x-3 mt-6">
+                    <button @click="submitFrame(frame.id)"
+                            class="bg-green-600 text-white px-4 py-2 rounded-lg"
+                            :disabled="submitted">
+                        Submit
+                    </button>
+
                     <button @click="nextFrame()"
-                            class="bg-blue-600 text-white px-4 py-2 rounded-lg">
+                            class="bg-blue-600 text-white px-4 py-2 rounded-lg"
+                            :disabled="!submitted">
                         Next Frame
                     </button>
                 </div>
@@ -93,8 +101,8 @@
             frames: Array.from({length: 21}, (_, i) => ({id: i + 1})),
             questions: [],
             answers: {},
-            submitted: {}, // track per-question submissions
             activeFrame: 1,
+            submitted: false,
             phase: 'content',
             completed: false,
             frameContent: "",
@@ -120,7 +128,7 @@
             },
 
             getOptionClass(q, opt) {
-                if (!this.submitted[q.id]) return 'hover:bg-gray-100 rounded px-2 py-1';
+                if (!this.submitted) return 'hover:bg-gray-100 rounded px-2 py-1';
                 if (q.correct === opt) return 'bg-green-100 text-green-800 font-semibold rounded px-2 py-1';
                 if (this.answers[q.id] === opt && this.answers[q.id] !== q.correct) {
                     return 'bg-red-100 text-red-800 font-semibold rounded px-2 py-1';
@@ -128,20 +136,31 @@
                 return 'opacity-70 px-2 py-1';
             },
 
-            autoSubmit(q) {
-                if (this.submitted[q.id]) return;
+            submitFrame(frameId) {
+                if (this.submitted) return;
 
-                if (this.answers[q.id] === q.correct) {
-                    this.correctCount++;
-                } else {
-                    this.wrongCount++;
+                let frameQs = this.getQuestions(frameId);
+                let allAnswered = frameQs.every(q => this.answers[q.id]);
+                if (!allAnswered) {
+                    alert("❗ कृपया सभी प्रश्नों के उत्तर दें (Please answer all questions before submitting).");
+                    return;
                 }
 
-                this.submitted[q.id] = true;
+                frameQs.forEach(q => {
+                    if (this.answers[q.id] === q.correct) {
+                        this.correctCount++;
+                    } else {
+                        this.wrongCount++;
+                    }
+                });
+
+                this.submitted = true;
             },
 
             async nextFrame() {
+                this.submitted = false;
                 this.phase = 'content';
+
                 if (this.activeFrame < this.frames.length) {
                     this.activeFrame++;
                     await this.loadFrameContent();
